src/objects/Event_staff_settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Attendee_Create__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attendee Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attendee_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attendee Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attendee_Read__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attendee Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attendee_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attendee Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dashboard_Read__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dashboard_Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reports_Read__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reports_Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seminar_Create__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Seminar_Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seminar_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Seminar_Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seminar_Read__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Seminar_Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seminar_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Seminar_Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tickets_Create__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tickets_Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tickets_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tickets_Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tickets_Read__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tickets_Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tickets_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tickets_Update</label>
        <type>Checkbox</type>
    </fields>
    <label>Event staff Settings</label>
</CustomObject>